# loggage

./: .gitignore  README.md  README_zh.md  config.yaml  main.py  pyproject.toml  requirements.txt
config/: config.yaml
core/: logger.py  models.py  queue.py
core/handlers/: base.py  elasticsearch.py  factory.py  mysql.py
loggage/config/: config.example.yaml
loggage/core/: logger.py
loggage/example/: bottle_example.py  fastapi_example.py
src/: base.py  factory.py  logger.py  models.py  queue.py
src/adapters/: es_adapter.py  mysql_adapter.py
src/core/: decorators.py  logger.py
src/core/handlers/: mysql.py
src/example/: bottle_example.py  fastapi_example.py
tests/: test_models.py
