[project]
name = "loggage"
version = "0.1.0"
description = "Store you operation log to different backend."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiomysql>=0.2.0",
    "elasticsearch[async]==7.17",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"